# floatask

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  task-tracker.jsx  vite.config.js
.github/workflows/: deploy.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
